--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Publish
         uses: cloudflare/wrangler-action@2.0.0
         with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
-          accountId: ${{ secrets.CF_ACCOUNT_ID }}
-          command: pages publish --project-name=example
+          apiKey: ${{ secrets.CF_API_TOKEN }}
+          email: ${{ secrets.CF_ACCOUNT_EMAIL }}
+          command: pnpm build -F admin && cd deployments/admin && pages publish --project-name=admin-mfe
