--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -9,8 +9,15 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: ^6
+      - name: Build
+        run: pnpm install && pnpm build -F admin
       - name: Publish
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
-          command: cd deployments/admin && pages publish --project-name=admin-mfe
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: "admin-mfe"
+          command: pages publish --project-name=admin-mfe --directory=./deployments/admin/out
