--- a/.github/workflows/order.yml
+++ b/.github/workflows/order.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploy
     steps:
-      - uses: actions/order@v3
+      - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         with:
           version: ^6
