--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -15,15 +15,21 @@ jobs:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
+
+      - uses: pnpm/action-setup@v2
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
+          version: ^6
+      - name: Build
+        run: pnpm install && pnpm build -F proxy
+        # with:
+        #   node-version: ${{ matrix.node-version }}
+        #   cache: "npm"
 
       # - name: Install dependencies
       #   run: npm install
 
-      # - name: ESLint
-      #   run: npm run lint
+      - name: ESLint
+        run: pnpm run lint -F proxy
 
       # - name: Build
       #   run: npm run build
