--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -19,17 +19,12 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: ^6
-      - name: Build
-        run: pnpm install && pnpm build -F proxy
-        # with:
-        #   node-version: ${{ matrix.node-version }}
-        #   cache: "npm"
 
-      # - name: Install dependencies
-      #   run: npm install
+      - name: Install Deps
+        run: pnpm install
 
       - name: ESLint
         run: pnpm run lint -F proxy
 
-      # - name: Build
-      #   run: npm run build
+      - name: Build
+        run: pnpm build -F proxy
