--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-and-publish:
@@ -11,20 +14,18 @@ jobs:
     name: Build and Publish
     steps:
       - uses: actions/checkout@v3
-      - name: Setup Node.js 18
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
-          cache: "npm"
 
       - name: Install dependencies
         uses: pnpm/action-setup@v2
         with:
           version: ^6
 
-      # - name: Publish
-      #   uses: cloudflare/wrangler-action@1.3.0
-      #   with:
-      #     apiToken: ${{ secrets.CF_API_TOKEN }}
-      #   env:
-      #     CF_ACCOUNT_ID: ${{secrets.CF_ACCOUNT_ID}}
+      - name: Publish
+        uses: cloudflare/wrangler-action@1.3.0
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          workingDirectory: ./deployments/proxy
+        env:
+          CF_ACCOUNT_ID: ${{secrets.CF_ACCOUNT_ID}}
