lots of cleanup

--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -1,9 +1,12 @@
+name: Deploy Admin Pages
+
 on:
-  pull_request:
-    branches: [main]
   push:
-    paths:
-      - deployments/admin/**
+    branches:
+      - main
+  # push:
+  #   paths:
+  #     - deployments/admin/**
 
 jobs:
   deploy:
