--- a/deployments/order/package.json
+++ b/deployments/order/package.json
@@ -4,17 +4,18 @@
     "check": "tsc --noEmit",
     "dev": "next dev -p $PORT",
     "start": "next start",
-    "build": "next build && next export"
+    "build": "next build && next export && next-static-manifest"
   },
   "dependencies": {
-    "next": "^12.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "^17.0.2",
+    "next-static-manifest": "^0.7.0",
     "typescript": "^4.7.4"
   }
 }
