--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mfe-pages",
+  "name": "worker-rp-pages",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
