--- a/.github/workflows/order.yml
+++ b/.github/workflows/order.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - main
-  # push:
-  #   paths:
-  #     - deployments/order/**
+  push:
+    paths:
+      - deployments/order/**
 
 jobs:
   deploy:
