--- a/deployments/order/package.json
+++ b/deployments/order/package.json
@@ -4,7 +4,8 @@
     "check": "tsc --noEmit",
     "dev": "next dev -p $PORT",
     "start": "next start",
-    "build": "next build && next export && next-static-manifest"
+    "build": "next build && next export && next-static-manifest && mv ./out/next-static-manifest.json ./functions/ && cp -r functions out",
+    "deploy": ""
   },
   "dependencies": {
     "next": "12.1.0",
@@ -12,6 +13,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^3.14.0",
     "@types/node": "^18.6.3",
     "@types/react": "17.0.2",
     "@types/react-dom": "^17.0.2",
