--- a/deployments/order/functions/tsconfig.json
+++ b/deployments/order/functions/tsconfig.json
@@ -6,5 +6,6 @@
     "esModuleInterop": true,
     "lib": ["ES2020"],
     "types": ["@cloudflare/workers-types"]
-  }
+  },
+  "exclude": ["node_modules"]
 }
