--- a/deployments/order/package.json
+++ b/deployments/order/package.json
@@ -4,11 +4,12 @@
     "check": "tsc --noEmit",
     "dev": "next dev -p $PORT",
     "start": "next start",
-    "build": "next build && next export && next-static-manifest && mv ./out/next-static-manifest.json ./functions/ && cp -r functions out",
+    "build": "next build && next export && nsm && mv ./out/next-static-manifest.json ./functions/ && cp -r functions out",
     "deploy": ""
   },
   "dependencies": {
     "next": "12.1.0",
+    "nsm-fork": "workspace:^0.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -17,7 +18,6 @@
     "@types/node": "^18.6.3",
     "@types/react": "17.0.2",
     "@types/react-dom": "^17.0.2",
-    "next-static-manifest": "^0.7.0",
     "typescript": "^4.7.4"
   }
 }
