--- a/.github/workflows/order.yml
+++ b/.github/workflows/order.yml
@@ -23,6 +23,7 @@ jobs:
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
+          workingDirectory: ./deployments/order
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           projectName: "order-mfe"
-          command: pages publish --project-name=order-mfe --directory=./deployments/order/out
+          command: pages publish --project-name=order-mfe out
