--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: "admin-mfe"
-          command: pages publish --project-name=admin-mfe --directory=./deployments/admin/out
+          workingDirectory: ./deployments/admin
+          command: pages publish --project-name=admin-mfe out
