--- a/.github/workflows/checkout.yml
+++ b/.github/workflows/checkout.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: "checkout-mfe"
-          command: pages publish --project-name=checkout-mfe --directory=./deployments/checkout/out
+          workingDirectory: ./deployments/checkout
+          command: pages publish --project-name=checkout-mfe out
