--- a/.github/workflows/menu.yml
+++ b/.github/workflows/menu.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: "menu-mfe"
-          command: pages publish --project-name=menu-mfe --directory=./deployments/menu/out
+          workingDirectory: ./deployments/menu
+          command: pages publish --project-name=menu-mfe out
