--- a/deployments/order/package.json
+++ b/deployments/order/package.json
@@ -4,7 +4,7 @@
     "check": "tsc --noEmit",
     "dev": "next dev -p $PORT",
     "start": "next start",
-    "build": "node node_modules/nsm-fork/dist/index.js && next build && next export && cp -r functions out"
+    "build": "node node_modules/nsm-fork/dist/index.js && next build && next export"
   },
   "dependencies": {
     "next": "12.1.0",
