--- a/deployments/checkout/package.json
+++ b/deployments/checkout/package.json
@@ -1,20 +1,23 @@
 {
   "name": "checkout",
   "scripts": {
-    "check": "tsc --noEmit",
-    "dev": "next dev -p $PORT",
-    "start": "next start",
-    "build": "next build && next export"
+    "generate-nsm": "node node_modules/nsm-fork/dist/index.js",
+    "check": "npm run generate-nsm && tsc --noEmit",
+    "dev": "npm run generate-nsm && next dev -p $PORT",
+    "build": "npm run generate-nsm && next build && next export",
+    "start": "next start"
   },
   "dependencies": {
-    "next": "^12.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "12.1.0",
+    "nsm-fork": "workspace:^0.7.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^3.14.0",
     "@types/node": "^18.6.3",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
     "typescript": "^4.7.4"
   }
 }
